--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@ function toggleMenu() {
   text-align: center;
   margin-top: 30px;
   font-size: 13px;
-  color: #ffffff;
+  color: #000000;
 }
 
 /* Desktop */
@@ -1200,10 +1200,10 @@ function toggleMenu() {
         >
         <div class="footer-contact">
           <p><strong>Alacrity Life Support Services</strong></p>
-          <p>123 Medical Parkway</p>
-          <p>Orange County, CA 92868</p>
+          <p>631 S Brookhurst St. </p>
+          <p>Anaheim, CA 92804</p>
           <p>Phone: (714) 683-0680</p>
-          <p>Email: info@alacritylss.com</p>
+          <p>Email: nick@alacritylss.com</p>
         </div>
       </div>
 
